--- a/spring-ai-demo/pom.xml
+++ b/spring-ai-demo/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>spring-ai-starter-model-chat-memory-repository-mongodb</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-mcp-client</artifactId>
+        </dependency>
+
     </dependencies>
 
 
