--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,10 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>spring-ai-demo</module>
+        <module>spring-ai-example</module>
         <module>mcp-weather-server</module>
+        <module>etl-opensearch</module>
+        <module>spring-ai-alibaba-agent-weather-agent</module>
     </modules>
 
     <properties>
@@ -26,7 +28,10 @@
         <maven.compiler.target>21</maven.compiler.target>
         <maven.compiler.release>21</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-ai.version>1.1.0</spring-ai.version>
+        <spring-ai.version>1.1.0-M4</spring-ai.version>
+        <spring-ai-memory-mongodb.version>1.1.0</spring-ai-memory-mongodb.version>
+        <spring-ai-alibaba.version>1.1.0.0-M5</spring-ai-alibaba.version>
+        <spring-ai-alibaba-extensions.version>1.1.0.0-M5</spring-ai-alibaba-extensions.version>
     </properties>
 
     <dependencyManagement>
@@ -38,6 +43,29 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.cloud.ai</groupId>
+                <artifactId>spring-ai-alibaba-extensions-bom</artifactId>
+                <version>${spring-ai-alibaba-extensions.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba.cloud.ai</groupId>
+                <artifactId>spring-ai-alibaba-bom</artifactId>
+                <version>${spring-ai-alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.ai</groupId>
+                <artifactId>spring-ai-starter-model-chat-memory-repository-mongodb</artifactId>
+                <version>${spring-ai-memory-mongodb.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
