--- a/spring-ai-example/pom.xml
+++ b/spring-ai-example/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>spring-ai-demo</artifactId>
+    <artifactId>spring-ai-example</artifactId>
 
     <dependencies>
         <dependency>
