--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
         <spring-ai-memory-mongodb.version>1.1.0</spring-ai-memory-mongodb.version>
         <spring-ai-alibaba.version>1.1.0.0-M5</spring-ai-alibaba.version>
         <spring-ai-alibaba-extensions.version>1.1.0.0-M5</spring-ai-alibaba-extensions.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+        <lombok.version>1.18.42</lombok.version>
     </properties>
 
     <dependencyManagement>
@@ -69,5 +71,26 @@
 
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven-compiler-plugin.version}</version>
+                    <configuration>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${lombok.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
